# pytest-sandbox

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: lint.yaml  pytest.yaml
src/pytest_sandbox/: __init__.py  exceptions.py  plugin.py  utils.py
tests/: test_collection.py  test_sandbox.py  test_utils.py
tests/impure/: conftest.py  test_options.py
